apps/bambuddy/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: bambuddy-ingress
  namespace: tools
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int-old
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`3dprint.sobrinho.pt`)
      kind: Rule
      services:
        - name: bambuddy-main
          port: main
  tls:
    secretName: bambuddy-cert
